# user-manager-service

./: .gitattributes  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: nodejs-test.yml  nodejs-with-prisma.yml  nodejs-with-typeorm.yml  nodejs.yml  publish.yml  snyk-push.yml
dashboard/: .clangd  .gitignore  .vimspector.json  CMakeLists.txt
dashboard/src/: main.cc
dashboard/src/checks/: actionFlag.cc  checkPrismaOption.cc  checkTypeORMOption.cc  header.hpp  projectDirFlag.cc
dashboard/src/initializers/components/orm.view/: view.cc  view.hpp
dashboard/src/initializers/menus/actions.menu/: init.cc  init.hpp
dashboard/src/initializers/menus/main.menu/: init.cc  init.hpp
dashboard/src/services/: defineORM.cc  defineORM.hpp
dashboard/src/views/: abstractView.h  abstractView.hpp
dashboard/src/views/actions.view/: lifecycle.cc  view.hpp
dashboard/src/views/actionsMenu/: actionsMenu.view.h  lifecycle.cc  remove.cc  spawn.cc
dashboard/src/views/main.view/: lifecycle.cc  view.hpp
dashboard/src/views/mainMenu/: lifecycle.cc  mainMenu.view.h  remove.cc  spawn.cc
dashboard/src/views/orm.view/: lifecycle.cc  prismaORM.clone.txt  view.hpp
dashboard/src/views/ormMenu/: lifecycle.cc  ormMenu.view.h  prismaORM.clone.txt  remove.cc  spawn.cc  typeORM.clone.txt
dashboard/src/window/: end.cc  init.cc  showOptions.cc  watchKeyboard.cc  window-flow.h  window.hpp  writeCentralizedText.cc
example/: docker-compose.yml
example/mysql/: init.sql
mysql/: mysql.cnf
tests/: docker-compose.test.yml  docker-compose.yml
user-service/: .env.example  .eslintignore  .gitignore  Dockerfile  app.Dockerfile  init.sh  jest.config.ts  jest.e2e.config.ts  ormconfig.ts  package.json  tests.Dockerfile  tsconfig-excludes.json  tsconfig.json
user-service/customTerminal/: .zshrc  install_zsh.sh
user-service/src/: app.module.ts  main.ts
user-service/templates/TFA/: TFA.eng.html  TFA.pt_br.html  index.ts
user-service/templates/createAccount/: createAccount.eng.html  createAccount.html  createAccount.pt_br.html  index.ts
user-service/templates/forgotPassword/: forgotPassword.eng.html  forgotPassword.html  index.ts
user-service/test/__mocks__/: BcryptAdapter.ts
(+282 files in other folders)
